Fix: fix overflow bug when using `guide-preferred-columns` mixin.
This bug happens when the minimum column width is less than the grid container width.
Fixed this bug by comparing the minimum value of parent width, and the min size, and taking the minimum value of them.

--- a/content/sass/variables/_misc.scss
+++ b/content/sass/variables/_misc.scss
@@ -46,8 +46,8 @@ $transition-clr : color 200ms ease;
 
 @mixin grid-preferred-columns($preferred-count, $min-size, $column-gap: 0px, $row-gap: 0px) {
     grid-template-columns: repeat(auto-fill,
-            minmax(max(calc((100% - $column-gap * ($preferred-count - 1)) / $preferred-count),
-                    $min-size), 1fr));
+            minmax(max(calc((100% - $column-gap * ($preferred-count - 1)) / $preferred-count), min($min-size, 100%)),
+                1fr));
     column-gap: $column-gap;
     row-gap: $row-gap;
 }
